// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alignStyles > should return properly 1`] = `
{
  "textAlign": "center",
}
`;

exports[`baseStyles > should return properly 1`] = `
{
  "boxSizing": "border-box",
  "fontFamily": "inherit",
}
`;

exports[`borderStyles > should return properly for "%p" all 1`] = `
{
  "border": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" end 1`] = `
{
  "borderInlineEnd": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" horizontal 1`] = `
{
  "borderBottom": "1px solid #e6e6e6",
  "borderTop": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" left 1`] = `
{
  "borderLeft": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" start 1`] = `
{
  "borderInlineStart": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" true 1`] = `
{
  "border": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly for "%p" vertical 1`] = `
{
  "borderLeft": "1px solid #e6e6e6",
  "borderRight": "1px solid #e6e6e6",
}
`;

exports[`borderStyles > should return properly with an array 1`] = `
{
  "borderLeft": "4px solid #ccdeff",
  "borderTop": "1px solid #e6e6e6",
}
`;

exports[`colorStyles > should return properly with "background" and "color" 1`] = `
{
  "backgroundColor": "#0058ff",
  "border": "1px solid #0058ff",
  "color": "#d3f8d7",
}
`;

exports[`colorStyles > should return properly with just "color" 1`] = `
{
  "color": "#ff6666",
}
`;

exports[`dimensionStyles > should return properly 1`] = `
{
  "height": "200px",
  "maxHeight": "100px",
  "maxWidth": "100%",
  "minHeight": "40px",
  "minWidth": "290px",
  "width": "480px",
}
`;

exports[`flexBoxStyles > should return properly 1`] = `
{
  "alignContent": undefined,
  "alignItems": "center",
  "flexDirection": "column",
  "flexWrap": "wrap",
  "gap": "20px",
  "justifyContent": undefined,
  "justifyItems": undefined,
  "placeContent": undefined,
  "placeItems": undefined,
}
`;

exports[`flexItemStyles > should return properly 1`] = `
{
  "alignSelf": "center",
  "flex": "1 1",
  "flexBasis": undefined,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`flexItemStyles > should return properly with flex object 1`] = `
{
  "alignSelf": "center",
  "flexBasis": undefined,
  "flexGrow": 1,
  "flexShrink": 1,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`flexItemStyles > should return properly with flex string 1`] = `
{
  "alignSelf": "center",
  "flex": "1 0",
  "flexBasis": undefined,
  "height": "100%",
  "justifySelf": undefined,
  "order": undefined,
  "width": "100%",
}
`;

exports[`getContainerStyles > should return properly 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    

    @media screen and (min-width: 1024px){padding-left:32px;padding-right:32px;};

    
  "
`;

exports[`getContainerStyles > should return properly with "responsive: false" 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    

    

    
  "
`;

exports[`getContainerStyles > should return properly with "verticalPadding: true" 1`] = `
"
    padding-left: 16px;
    padding-right: 16px;

    
      padding-bottom: 16px;
      padding-top: 16px;
    ;

    @media screen and (min-width: 1024px){padding-left:32px;padding-right:32px;};

    @media screen and (min-width: 1024px){padding-bottom:32px;padding-top:32px;};
  "
`;

exports[`getDisableStyles > should return properly 1`] = `
"
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
  "
`;

exports[`getDisableStyles > should return properly with "hasPlaceholder: true" 1`] = `
"
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  "
`;

exports[`getDisableStyles > should return properly with "isButton: true" 1`] = `
"
    background-color: transparent;
    border-color: #e6e6e6;
    color: #808080;
    cursor: not-allowed;

    
  "
`;

exports[`getDisableStyles > should return properly with "variation: clean" 1`] = `
"
    background-color: transparent;
    border-color: transparent;
    color: #808080;
    cursor: not-allowed;

    
  "
`;

exports[`getStyles > should return an object with the basic styles 1`] = `
{
  "boxSizing": "border-box",
  "fontFamily": "inherit",
}
`;

exports[`getStyles > should return properly 1`] = `
{
  "backgroundColor": "#0058ff",
  "border": "1px solid #0058ff",
  "borderRadius": "16px",
  "boxShadow": "2px 4px 16px 4px rgba(148, 148, 148, 0.24)",
  "boxSizing": "border-box",
  "color": "white",
  "display": "flex",
  "flex": "1 1",
  "flexDirection": "column",
  "fontFamily": "inherit",
  "fontWeight": 700,
  "gap": "12px",
  "height": "200px",
  "lineHeight": 1.2,
  "margin": "16px",
  "padding": "12px",
  "pointerEvents": "none",
  "width": "100px",
  "zIndex": 10,
}
`;

exports[`gridStyles > should return properly 1`] = `
{
  "columnGap": "12px",
  "grid": "auto-flow / 1fr 1fr 1fr",
  "gridArea": "1 / 1 / 2 / 2",
  "gridAutoColumns": "auto",
  "gridAutoFlow": "row",
  "gridAutoRows": "auto",
  "gridColumn": "1 / 2",
  "gridColumnEnd": "auto",
  "gridColumnStart": "auto",
  "gridRow": "2 / -1",
  "gridRowEnd": "span 3",
  "gridRowStart": "auto",
  "gridTemplate": ""a a a" 40px "b c c" 40px "b c c" 40px / 1fr 1fr 1fr",
  "gridTemplateAreas": "a b c",
  "gridTemplateColumns": "1fr 60px",
  "gridTemplateRows": "1fr 2fr 1fr",
  "rowGap": "16px",
}
`;

exports[`hoverStyles > should return "backgroundColor" and "borderColor" 1`] = `
{
  "backgroundColor": "#3379ff",
  "borderColor": "#3379ff",
}
`;

exports[`hoverStyles > should return "borderColor" and "color" for variant "bordered 1`] = `
{
  "borderColor": "#3379ff",
  "color": "#3379ff",
}
`;

exports[`hoverStyles > should return an empty object with "disabled" 1`] = `{}`;

exports[`hoverStyles > should return only and "color" for variant "clean 1`] = `
{
  "color": "#3379ff",
}
`;

exports[`inputStyles > should return custom styles for "input" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: 40px;
    line-height: 1.4;
    padding: 12px 0 12px 40px;
    width: 100%;
    
        background-color: transparent;
        border: 0;
        border-bottom: 1px solid #808080;
      ;

    &:focus {
      
box-shadow: 0 3px 0 0 rgba(0, 88, 255, 0.996);
outline: none;

      
    }

    &:disabled {
      
    background-color: ;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
      &::placeholder {
        color: #808080;
      }

      &:not(:placeholder-shown) {
        border-color: #0058ff;
      }

      &:read-only {
        
    background-color: ;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
      }
    ;
  "
`;

exports[`inputStyles > should return the default styles for "select" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: 40px;
    line-height: 1.4;
    padding: 8px 24px 8px 16px;
    width: 100%;
    
        background-color: #fff;
        border: 1px solid #808080;
        border-radius: 8px;
      ;

    &:focus {
      
      outline:rgba(0, 88, 255, 0.6) solid 3px;outline-offset:1px;z-index:10;
    }

    &:disabled {
      
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
  "
`;

exports[`inputStyles > should return the default styles for "textarea" 1`] = `
"
    color: #101010;
    display: block;
    font-family: inherit;
    font-size: 16px;
    height: ;
    line-height: 1.4;
    padding: 8px 40px 8px 16px;
    width: 100%;
    
        background-color: #fff;
        border: 1px solid #808080;
        border-radius: 8px;
      ;

    &:focus {
      
      outline:rgba(0, 88, 255, 0.6) solid 3px;outline-offset:1px;z-index:10;
    }

    &:disabled {
      
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
    }

    
      &::placeholder {
        color: #808080;
      }

      &:not(:placeholder-shown) {
        border-color: #0058ff;
      }

      &:read-only {
        
    background-color: #f7f7f7;
    border-color: #e6e6e6;
    color: #4d4d4d;
    cursor: not-allowed;

    
      &::placeholder {
        color: #b3b3b3;
      }
    ;
  ;
      }
    ;
  "
`;

exports[`layoutStyles > should return properly 1`] = `
{
  "display": "flex",
  "opacity": 1,
  "pointerEvents": "none",
  "transition": "all 0.2s",
}
`;

exports[`marginStyles > should return properly 1`] = `
{
  "margin": "16px",
  "marginBottom": "8px",
  "marginLeft": "auto",
  "marginRight": "auto",
  "marginTop": "8px",
}
`;

exports[`marginStyles > should return properly for side values 1`] = `
{
  "marginBottom": "24px",
  "marginLeft": "auto",
  "marginRight": "auto",
  "marginTop": "32px",
}
`;

exports[`outlineStyles > should return properly 1`] = `
"
    @supports not selector(:focus-visible) {
      &:focus {
        outline:rgba(255, 0, 68, 0.6) solid 3px;outline-offset:1px;z-index:10;
      }
    }

    &:focus-visible {
      outline:rgba(255, 0, 68, 0.6) solid 3px;outline-offset:1px;z-index:10;
    }
  "
`;

exports[`paddingStyles > should handle zero values 1`] = `
{
  "padding": 0,
  "paddingBottom": 0,
  "paddingLeft": 0,
  "paddingRight": 0,
  "paddingTop": 0,
}
`;

exports[`paddingStyles > should handle zero values for "px" and "py" 1`] = `
{
  "paddingBottom": 0,
  "paddingLeft": 0,
  "paddingRight": 0,
  "paddingTop": 0,
}
`;

exports[`paddingStyles > should return properly 1`] = `
{
  "padding": "16px",
  "paddingBottom": "8px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "8px",
}
`;

exports[`paddingStyles > should return properly for side values 1`] = `
{
  "paddingBottom": "24px !important",
  "paddingLeft": "8px !important",
  "paddingRight": "12px !important",
  "paddingTop": "32px !important",
}
`;

exports[`positioningStyles > should return properly 1`] = `
{
  "bottom": "0px",
  "left": "0px",
  "position": "absolute",
  "right": "0px",
  "top": "0px",
}
`;

exports[`radiusStyles > should return properly with a string 1`] = `
{
  "borderRadius": "4px",
}
`;

exports[`radiusStyles > should return properly with an object 1`] = `
{
  "borderBottomLeftRadius": "16px",
  "borderBottomRightRadius": "8px",
  "borderTopLeftRadius": "16px",
  "borderTopRightRadius": "24px",
}
`;

exports[`shadowStyles > should return properly for "'box-shadow (dark)'" 1`] = `
{
  "boxShadow": "2px 4px 16px 4px rgba(222, 222, 222, 0.24)",
}
`;

exports[`shadowStyles > should return properly for "'box-shadow (light)'" 1`] = `
{
  "boxShadow": "2px 4px 16px 2px rgba(148, 148, 148, 0.16)",
}
`;

exports[`shadowStyles > should return properly for "'filter (dark)'" 1`] = `
{
  "filter": "drop-shadow(2px 4px 18px rgba(222, 222, 222, 0.8))",
}
`;

exports[`shadowStyles > should return properly for "'filter (light)'" 1`] = `
{
  "filter": "drop-shadow(2px 4px 8px rgba(148, 148, 148, 0.4))",
}
`;

exports[`textStyles > should return properly 1`] = `
{
  "fontSize": "14px",
  "fontStyle": "italic",
  "fontWeight": 700,
  "lineHeight": 1.2,
  "textTransform": "uppercase",
}
`;
